Fix campaign heaeder spacing

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -2680,7 +2680,7 @@ l div.addthis_toolbox a.addthis_button_google_plusone,.node-type-openpublish-pho
 }
 
 body.node-type-takepart-campaign #highlighted {
-    padding-bottom: 20px;
+    padding: 25px 0;
 }
 
 #highlighted .region-highlighted {
